--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>pt.uminho.ceb.biosystems.mew</groupId>
-	<artifactId>mew.solvers.cplex</artifactId>
+	<artifactId>solvers-cplex</artifactId>
 	<version>0.0.2-SNAPSHOT</version>
 
+	<name>solvers.cplex</name>
+	<url>http://maven.apache.org</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
