--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>pt.uminho.ceb.biosystems.mew</groupId>
-	<artifactId>solvers-cplex</artifactId>
+	<artifactId>mew-solvers-cplex</artifactId>
 	<version>0.0.2-SNAPSHOT</version>
 
 	<name>solvers.cplex</name>
