[POM-Auto] strip SNAPSHOT in dependencies versions

--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
 		<maven.compiler.target>1.7</maven.compiler.target>
 		<cplex.jar.path>define your path</cplex.jar.path>
 		<project.sign.skip>true</project.sign.skip>
-		<meworkbench.version>1.0.0-SNAPSHOT</meworkbench.version>
+		<meworkbench.version>1.0.0</meworkbench.version>
 	</properties>
 
 	<scm>
