[CI] - fix CPLEX_HOME env variable

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ before_script:
   - sed -i 's,ARTIFACTORY_JCENTER_REPO_KEY,'"$ARTIFACTORY_JCENTER_REPO_KEY"',g' configuration.yml
   # CPLEX JAR
   - mkdir -p ~/CPLEX/lib/
-  - export CPLEX_HOME=~CPLEX
+  - export CPLEX_HOME=~/CPLEX
   - ./jfrog rt dl --flat true libs-release-local/com/ibm/ilog/cplex/1.2.5/cplex-1.2.5.jar $CPLEX_HOME/lib/cplex.jar
 
 stages:
