--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,14 @@
 image: maven:latest
 
+variables:
+  MAVEN_CLI_OPTS: "-s /root/.m2/settings.xml --batch-mode"
+  MAVEN_OPTS: "-Dmaven.repo.local=/root/.m2/repository"
+
+cache:
+  paths:
+    - /root/.m2/repository/
+    - target/
+
 before_script:
   #SSH agent
   - 'which ssh-agent || ( apk update  && apk add openssh)'
@@ -33,14 +42,14 @@ maven_compile:
   tags:
     - maven
   script:
-    - mvn compile
+    - mvn $MAVEN_CLI_OPTS compile
  
 maven test:
   stage: test
   tags: 
     - maven
   script:
-    - mvn test
+    - mvn $MAVEN_CLI_OPTS test
 
 maven_deploy:
   stage: deploy
