--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,7 @@
 image: maven:latest
 
 variables:
-  MAVEN_CLI_OPTS: "-s /root/.m2/settings.xml --batch-mode"
-  MAVEN_OPTS: "-Dmaven.repo.local=/root/.m2/repository"
-
-cache:
-  paths:
-    - /root/.m2/repository/
-    - target/
+  MAVEN_CLI_OPTS: "-s settings.xml --batch-mode"
 
 before_script:
   #SSH agent
@@ -27,6 +21,10 @@ before_script:
   - sed -i 's,SNAPSHOT_REPO_KEY,'"$SNAPSHOT_REPO_KEY"',g' configuration.yml
   - sed -i 's,RELEASE_REPO_KEY,'"$RELEASE_REPO_KEY"',g' configuration.yml
   - sed -i 's,ARTIFACTORY_JCENTER_REPO_KEY,'"$ARTIFACTORY_JCENTER_REPO_KEY"',g' configuration.yml
+  # modify settings.xml
+  - sed -i 's,ARTIFACTORY_URL,'"$ARTIFACTORY_URL"',g' settings.yml
+  - sed -i 's,ARTIFACTORY_USER,'"$ARTIFACTORY_USER"',g' settings.yml
+  - sed -i 's,ARTIFACTORY_PASS,'"$ARTIFACTORY_PASS"',g' settings.yml
   # CPLEX JAR
   - mkdir -p ~/CPLEX/lib/
   - export CPLEX_HOME=~/CPLEX
