--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,5 +58,5 @@ maven_deploy:
     - ./jfrog rt mvn "clean verify gpg:sign install -DadditionalJOption=-Xdoclint:none" configuration.yml --build-name=solvers-cplex_gitlabci_build --build-number=$CI_JOB_ID
     - ./jfrog rt bce solvers-cplex_gitlabci_build $CI_JOB_ID
     - ./jfrog rt bp solvers-cplex_gitlabci_build $CI_JOB_ID
-#  only:
-#    - master
+  only:
+    - master
