--- a/pom.xml
+++ b/pom.xml
@@ -141,4 +141,23 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+<!-- 		<repositories> -->
+<!-- 		<repository> -->
+<!-- 			<id>snapshots</id> -->
+<!-- 			<name>maven snapshots repo</name> -->
+<!-- 			<url>https://oss.sonatype.org/content/repositories/snapshots</url> -->
+<!-- 		</repository> -->
+<!-- 	</repositories> -->
+
+	<distributionManagement>
+		<repository>
+			<id>oss.sonatype.org</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+		<snapshotRepository>
+			<id>oss.sonatype.org</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
