--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: java
 cache:
   directories:
     - $HOME/.gradle/caches/
+    
+before_install:
+  - wget https://drive.google.com/file/d/${CPLEX_SHARE_FILE}
+  - mv ${CPLEX_SHARE_FILE} lib/cplex.jar
 
 deploy:
     provider: script
