--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,12 @@ language: java
 cache:
   directories:
     - $HOME/.gradle/caches/
-    
+    - $HOME/lib
+
+
 before_install:
   - wget https://drive.google.com/file/d/${CPLEX_SHARE_FILE}
-  - mv ${CPLEX_SHARE_FILE} lib/cplex.jar
+  - mv ${CPLEX_SHARE_FILE} $HOME/lib/cplex.jar
 
 deploy:
     provider: script
