--- a/pom.xml
+++ b/pom.xml
@@ -142,13 +142,13 @@
 		</plugins>
 	</build>
 	
-<!-- 		<repositories> -->
-<!-- 		<repository> -->
-<!-- 			<id>snapshots</id> -->
-<!-- 			<name>maven snapshots repo</name> -->
-<!-- 			<url>https://oss.sonatype.org/content/repositories/snapshots</url> -->
-<!-- 		</repository> -->
-<!-- 	</repositories> -->
+	<repositories>
+		<repository>
+			<id>snapshots</id>
+			<name>maven snapshots repo</name>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</repository>
+	</repositories>
 
 	<distributionManagement>
 		<repository>
