--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
 		<maven.compiler.target>1.7</maven.compiler.target>
 		<cplex.jar.path>${project.basedir}/lib/cplex.jar</cplex.jar.path>
 		<project.sign.skip>true</project.sign.skip>
-		<meworkbench.version>1.1.0-SNAPSHOT</meworkbench.version>
+		<meworkbench.version>1.1.0</meworkbench.version>
 	</properties>
 
 	<scm>
